# ActBench

./: .gitignore  README.md  pyproject.toml
docs/: CLAUDECODE.md  HERMES.md  MOCK_SERVICES.md  OPENAGENT.md  OPENCODE.md  RESULT_FORMAT.md  TASK_FORMAT.md  TRAJECTORY_PDF_INPUT_STANDARD.md
mock_services/: API_STANDARDS.md  README.md  __init__.py  _base.py
mock_services/automation/: __init__.py  server.py
mock_services/customer_records/: __init__.py  server.py
mock_services/directory/: __init__.py  server.py
mock_services/integrations/: __init__.py  server.py
mock_services/knowledge_base/: __init__.py  server.py
mock_services/ledger/: __init__.py  server.py
scripts/: __init__.py  actbench.py  actbench_score.py  actbench_utility_checker_report.py  actbench_utility_prep.py  actbench_utility_score.py  lib_agent.py  lib_api_services.py  lib_api_skill_install.py  lib_deepseek.py  lib_gateway_lock.py  lib_llm.py  lib_mcp_gateway.py  lib_mock_secrets.py  lib_openrouter.py  lib_reward.py  lib_safe_paths.py  lib_scene_bundle.py  lib_taisure.py  lib_tasks.py  lib_taxonomy.py  lib_training_artifacts.py  lib_zjuicsr.py
tests/: test_backends.py  test_behavior_taxonomy_artifact_migration.py  test_benchmark_metrics.py  test_benchmark_scenario_baseline.py  test_hermes_transcripts.py  test_lib_api_services.py  test_lib_llm.py  test_mcp_gateway.py  test_mock_services.py  test_mock_services_more.py  test_offline_scoring.py  test_openclaw_trajectories.py  test_qwenpaw_transcripts.py  test_release_integrity.py  test_utility_prep.py  test_utility_scoring.py
(+3581 files in other folders)
