[project]
name = "actbench"
version = "0.1.0"
description = "ActBench security evaluation suite for OpenClaw agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[project.scripts]
actbench = "scripts.actbench:main"
benchmark = "scripts.actbench:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts", "scripts.benchmark", "scripts.benchmark.*", "mock_services", "mock_services.*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
